--- a/css/nbview.css
+++ b/css/nbview.css
@@ -3,38 +3,85 @@ body {
     font-size: 14px;
 }
 
-#main {
-    width: 99%;
-    max-width: 750px;
-    margin: 0 auto;
+h1 {
+    font-size: 22px;
+    margin: 10px 0 2px;
+}
+
+h2 {
+    font-size: 14px;
+    color: #555;
+    margin: 0 0 25px;
 }
 
 #header {
-    line-height: 2;
-    margin-bottom: 0.25em;
+    text-align: center;
+    padding: 25px 0;
+    background: #eeeeee;
+    margin 0 0 20px;
+}
+
+#urlname {
+    font-family: 'Source Code Pro', monospace;
     font-weight: bold;
 }
 
-#controls {
-    border: 1px dotted #CCC;
-    padding: 0.75em;
-    margin-bottom: 0.5em;
-    background-color: #EEF;
+#urlname a {
+    color: #222;
+    text-decoration: none;
 }
 
-#footer {
-    border: 1px dotted #CCC;
-    background-color: #EEF;
-    font-size: 0.8em;
-    padding: 0.5em;
+#urlstuff {
+    display: none;
+}
+
+#search {
+    padding: 25px 0 25px;
     text-align: center;
 }
 
-#footer a, #footer a:visited {
-    color: #0077EE;
+#search input {
+    width: 750px;
+    padding: 10px;
+}
+
+#notebook {
+    padding: 25px 0 25px;
+    display: none;
+}
+
+#error {
+    margin: 25px auto;
+    padding: 10px 10px;
+    background: #FDF0F0;
+    border: 1px solid #DA4948;
+    color: #DA4948;
+    display: none;
+}
+
+#footer {
+    background: #eeeeee;
+    padding: 25px 0 25px;
+    font-size: 12px;
+    color: #222;
+    line-height: 1.3;
+}
+
+#footer a {
+    color: #222;
+    text-decoration: underline;
+}
+
+.inner {
+    width: 800px;
+    margin: 0 auto;
 }
 
 .nb-notebook {
-    width: 700px;
+    width: 800px;
     margin: 0 auto;
+}
+
+pre, code {
+    font-family: 'Source Code Pro', monospace;
 }
