--- a/css/nbview.css
+++ b/css/nbview.css
@@ -3,12 +3,12 @@ body {
     font-size: 14px;
 }
 
-h1 {
+#header h1 {
     font-size: 22px;
     margin: 10px 0 2px;
 }
 
-h2 {
+#header h2 {
     font-size: 14px;
     color: #555;
     margin: 0 0 25px;
